--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,12 +12,13 @@ constraintlayout = "2.2.1"
 navigationFragmentKtx = "2.7.4"
 navigationUiKtx = "2.7.4"
 navigationTesting = "2.8.8"
-# Room Database versions - NOI
 room = "2.6.1"
 lifecycle = "2.7.0"
 coroutines = "1.7.3"
 fragment = "1.6.2"
 filamentAndroid = "1.17.1"
+composeCompiler = "1.5.14"
+composeBom = "2024.01.00"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -53,3 +54,5 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 androidx-navigation-safeargs-kotlin = { id = "androidx.navigation.safeargs.kotlin", version = "2.7.4" }
 # Kotlin KAPT plugin - NOU
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+# Kotlin Compose Compiler plugin - NECESAR PENTRU KOTLIN 2.0+
+kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
